--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -1,7 +1,12 @@
 <%= attachment_image_tag @product, :image, :fill, 200, 300, format: 'png', fallback: "no_image.png" %></td>
+
 <h3 class="product-name"><%= product.name %></h3>
 <h3 class="product-body"><%= product.body %></h3>
 
 <h3 class="product-price"><%= product.excluding_tax_price %></h3>
-<%= link_to "カートに追加", cart_products_path(@product), class:"show_#{@product}", class: "btn btn-success" %>
+
+<%= form_with model:@cart_product, url: cart_products_path, local:true do |f| %>
+<!--個数を入れるセレクトBOX追加-->
+<%= f.submit "カートに追加" %>
+<% end %>
 <!--カート内容は、オートモさんに依頼、こっちは今は何もしない-->
