--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -42,6 +42,6 @@
 </table>
 
 <div>
-  <%= link_to "編集する",edit_admin_customer_path(@customer) %>
-  <%= link_to " 注文履歴一覧を見る", admin_order_index_path(@customer) %>
+  <%= link_to "編集する",edit_admin_customer_path(@customer), class:"btn btn-success btn-customer_edit" %>
+  <%= link_to " 注文履歴一覧を見る", admin_order_index_path(@customer), class:"btn btn-primary btn-order_index" %>
 </div>
