[add]ログイン関係view作成、routes修正

--- a/app/views/publics/registrations/new.html.erb
+++ b/app/views/publics/registrations/new.html.erb
@@ -1,49 +1,64 @@
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
-      <h2>新機関員登録</h2>
-      <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <div class="field">
-          <%= f.label :name %><br />
-          <%= f.text_field :name, autofocus: true, class: "name" %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-offset-1 col-xs-11">
+      <h2 class="head-line title_h2 text-center"><i class="fas fa-user-edit"></i>新規会員登録</h2>
+        <%= form_with model: @customer, url: customer_registration_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          
+          <div class="field form-group col-xs-12">
+            <%= f.label :"名前", class: "col-sm-2 control-label" %>
+            <%= f.label :"(姓)", class: "col-sm-1 control-label" %>
+            <%= f.text_field :family_name, autofocus: true, class: "col-sm-3 form-control-static name" %>
+            <%= f.label :"(名)", class: "col-sm-1 control-label" %>
+            <%= f.text_field :first_name, autofocus: true, class: "col-sm-3 form-control-static name" %>
+          </div>
+          
+          <div class="field form-group col-xs-12">
+            <%= f.label :"フリガナ", class: "col-sm-2 control-label" %>
+            <%= f.label :"(セイ)", class: "col-sm-2 control-label" %>
+            <%= f.text_field :family_name_kana, autofocus: true, class: "col-sm-3 form-control-static name" %>
+            <%= f.label :"(メイ)", class: "col-sm-2 control-label" %>
+            <%= f.text_field :first_name_kana, autofocus: true, class: "col-sm-3 form-control-static name" %>
+          </div>
+          
+          <div class="form-group col-xs-9">
+            <%= f.label :"メールアドレス", class: "col-sm-4 control-label" %>
+            <%= f.text_field :email, autofocus: true, class: "col-sm-6 form-control-static"%>
+          </div>
+  
+          <div class="form-group col-xs-9">
+            <%= f.label :"郵便番号", autofocus: true, class: "col-sm-4 control-label" %>
+            <%= f.text_field :postcode, class: "col-sm-4 form-control-static postal_code" %>
+          </div>
+          
+          <div class="form-group col-xs-9">
+            <%= f.label :"住所", class: "col-sm-4 control-label" %>
+            <%= f.text_field :address, autofocus: true, class: "col-sm-5 form-control-static address"  %>
+          </div>
+          
+          <div class="form-group col-xs-9">
+            <%= f.label :"電話番号", class: "col-sm-4 control-label" %>
+            <%= f.text_field :phone_number, class: "col-sm-4 form-control-static" %>
+          </div>
+          
+          <div class="field form-group col-xs-9">
+            <%= f.label :"パスワード(6文字以上)", class: "col-sm-4 control-label" %>
+            <%= f.password_field :password, autocomplete: "new-password", class: "col-sm-4 form-control-static" %>
+          </div>
+    
+          <div class="field form-group col-xs-9">
+            <%= f.label :"パスワード(確認用)", class: "col-sm-4 control-label" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "col-sm-4 form-control-static" %>
+          </div>
+    
+          <div class="actions col-xs-9">
+            <%= f.submit "新規登録",class: 'btn btn-success btn-lg col-xs-7' %>
+          </div>
+        <% end %>
+        <div class="col-xs-9">
+          <h2 class="head-line title_h2 text-center">既に登録済みの方</h2>
+          <p class="new-link"><%= render "publics/shared/links" %>からログインしてください。</p>
         </div>
-        <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, class: "email" %>
-        </div>
-        
-        
-        <div class="field">
-          <%= f.label :postal_code %><br />
-          <%= f.text_field :postal_code, autofocus: true, class: "postal_code" %>
-        </div>
-      
-        <div class="field">
-          <%= f.label :"住所" %><br>
-          <%= f.text_field :address, autofocus: true,  class: "address" %>
-        </div>
-        
-        
-        <div class="field">
-          <%= f.label :"パスワード(６文字以上)" %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", class: "password" %>
-        </div>
-        
-        <div class="field">
-          <%= f.label :"パスワード(確認用)" %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
-        
-        <div class="actions">
-          <%= f.submit "新規登録" ,class: 'btn btn-sm btn-success' %>
-        </div>
-      <% end %>
-      <%= render "publics/shared/links" %>
-      <%#= render "devise/shared/links" %>
     </div>
   </div>
 </div>
