--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <main>
       <%= yield %>
     </main>
-    <%= render 'layouts/footer' %>
+    <div class="footerFixed">
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
