--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,9 @@ header{
   background:#9c692c;
   color:white;
   font-style: normal;
+  position: absolute;/* ←絶対位置 */
+  bottom: 0;
+  width:100%;
 }
 
 .copyright{
@@ -59,4 +62,43 @@ address{
 
 .icon{
   font-size:32px;
+}
+
+.span{
+  font-size:23px;
+  display:block;
+  border-bottom: solid 2px white;
+  letter-spacing:2px;
+
+}
+
+.col-md-2{
+  list-style:none;
+  font-color:white;
+  font-size:19px;
+  font-style:normal;
+}
+.dt{
+  font-size:20px;
+  display:block;
+  border-bottom: solid 2px white;
+  letter-spacing:2px;
+}
+
+.menu{
+  padding:10px, 10px;
+}
+
+.marker{
+  background:linear-gradient(transparent 0%, #b4b6b8 90%);
+  display:inline-block
+}
+
+.footerFixed{
+  padding-bottom: 60px; /* ←フッターの高さを指定 */
+  box-sizing: border-box;
+}
+body{
+  min-height: 100vh;
+  position: relative;
 }
