--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,33 +1,40 @@
-<h2>配送先登録/一覧</h2>
-<%= form_with(model: @address, :url => {:controller => "public/addresses"}) do |f| %>
-  <div>
-    <div>
-      <%= f.label :"郵便番号(ハイフンなし)" %>
-      <%= f.text_field :postcode %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+          <h2 class="marker"> 配送先登録/一覧</h2>
+          <%= form_with(model: @address, :url => {:controller => "public/addresses"}) do |f| %>
+              <div class="col-xs-10">
+                <div class="col-xs-12">
+                  <%= f.label :"郵便番号(ハイフンなし)" %>
+                  <%= f.text_field :postcode ,placeholder:"0000000" %>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.label :"住所" %>
+                  <%= f.text_field :address ,:size=>"40" , placeholder:"東京都渋谷区代々木神園町0-0"%>
+                </div>
+                <div class="col-xs-3">
+                  <%= f.label :"宛名" %>
+                  <%= f.text_field :name , placeholder:"長野太郎"%>
+                </div>
+                <%= f.submit "新規登録" %>
+              </div>
+          <% end %>
+
     </div>
-    <div>
-      <%= f.label :"住所" %>
-      <%= f.text_field :address %>
-    </div>
-    <div>
-      <%= f.label :"宛名" %>
-      <%= f.text_field :name %>
-    </div>
-    <%= f.submit "新規登録" %>
   </div>
-<% end %>
+</div>
 
 
-<table>
+<table border="2">
   <thead>
-    <tr>
+    <tr bgcolor="lightgray">
       <th>郵便番号</th>
       <th>住所</th>
       <th>宛名</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-  
+
   <tbody>
     <% @addresses.each do |address| %>
       <tr>
