--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="row mt-5">
-    <table class="table table-hover">
+    <table class="table">
       <thead>
         <tr>
           <th>購入日時</th>
@@ -31,3 +31,4 @@
 
       </tr>
   <% end %>
+  <%= paginate @orders %>
