--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -5,7 +5,7 @@
 
   <div class="row mt-3">
     <div class="col-sm-9">
-    <table class="table table-borderless">
+    <table class="table">
 
         <tbody>
           <tr>
@@ -33,7 +33,7 @@
 
           <tr>
             <td>注文ステータス</td>
-            <td><%= form_with url: admin_order_path do |form| %>
+            <td><%= form_with url: admin_order_path(@order),local: true,method: :patch  do |form| %>
    　          　<%= select_tag 'search', options_for_select([["入金待ち", "入金待ち"], ["入金確認","入金確認"],["製作中","製作中"],["発送準備中","発送準備中"],["発送済み","発送済み"]]) %>
                 <%= form.submit '更新' %>
               <% end %>
@@ -47,10 +47,10 @@
 </div>
 </div>
 
-div class="row mt-3">
+<div class="row mt-3">
     <div class="col-sm-9">
 
-      <table class="table table-hover">
+      <table class="table">
         <thead>
           <tr>
             <th>商品名</th>
@@ -62,10 +62,21 @@ div class="row mt-3">
           </tr>
         </thead>
 
-        <% @order_products.each do |order_product| %>
           <tbody>
+            <% @order_products.each do |order_product| %>
             <tr>
-              <td></td>
+              <td><%= order_product.product.name %></td>
+              <td><%= order_product.including_tax_price/12 %></td>
+              <td><%= order_product.amount %></td>
+              <td><%= order_product.including_tax_price %></td>
             </tr>
+            <td>
+              <%= form_with model: order_product, url: admin_order_product_path(order_product, order_id: @order.id) do |f| %>
+                <%= f.select :making_status, [["着手不可", "着手不可"], ["製作待ち","製作待ち"], ["製作中","製作中"], ["製作完了","製作完了"]] %>
+                <%= f.submit "更新", class: "btn btn-primary btn-sm ml-3" %>
+                <% end %>
+            </td>
+
+            <% end %>
           </tbody>
       </table>
