--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -2,7 +2,11 @@
   <table class="table">
     <thead>
       <tr>
-        <th></th>
+        <%= form_with model:@product, local:true do |f| %>
+          <td><h4>ジャンル名</h4></td>
+          <td><%= f.text_field :name, autofocus: true, id:"inputTitle", placeholder:"name"%></td>
+          <td><%= f.submit "変更を保存" %></td>
+        <% end %>
       </tr>
     </thead>
 
@@ -10,7 +14,7 @@
       <% @products.each do |product| %>
         <tr>
           <td><%= product.title %></td>
-          <td><%= link_to "編集する", _path(@product), class:"edit_#{@product}", class: "btn btn-success" %></td>
+          <td><%= link_to "編集する", edit_admin_genre_path(@product), class:"edit_#{@product}", class: "btn btn-success" %></td>
         </tr>
       <% end %>
     </tbody>
