--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -22,5 +22,4 @@
     </tr>
   </table>
 
-<%= link_to "編集する", cart_products_path(@product), class:"show_#{@product}", class: "btn btn-success" %>
-<!--カート内容は、オートモさんに依頼、こっちは今は何もしない-->
+<%= link_to "編集する", cart_products_path(@product), class:"edit_#{@product}", class: "btn btn-success" %>
