--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -17,15 +17,19 @@
 
     <div class="form-group">
       <h5>ジャンル</h5>
-      <%= f.text_area :body, autofocus: true, id:"body", placeholder:"商品説明"%>
+      <%= select_tag(:choice, options_for_select([["選択してください", "1" ],["ケーキ", "2" ],["プリン", "3" ],["焼き菓子", "4" ],["キャンディ", "5" ]])) %>
+      <%= f.text_area :body, autofocus: true, id:"body", placeholder:"ジャンル"%>
     </div>
-
-
-
 
     <div class="form-group">
       <h5>税抜価格</h5>
       <%= f.text_area :body, autofocus: true, id:"body", placeholder:"1000円"%>
+    </div>
+    
+    <div class="form-group">
+      <h5>販売ステータス</h5>
+      <label><%= f.radio_button :sale_status, "販売中" %> 販売中 </label>
+      <label><%= f.radio_button :sale_status, "販売停止中" %> 販売停止中</label>
     </div>
 
     <div class="form-group">
