--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-        <% if customer_signed_in? %>
+        <% if admin_signed_in? %>  
+          <li><%= link_to ' products',admin_products_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' customers',admin_customers_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' orders',admin_orders_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' genres',admin_genres_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' logout', destroy_admin_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+        <% elsif customer_signed_in? %>
           <li class="header-name">
             ようこそ、<%= current_customer.family_name %>さん！
           </li>
