--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,9 +9,9 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
-          <!--<li class="header-name">-->
-            <!--ようこそ、<= family_name.(current_customer) %>さん！-->
-          <!--</li>-->
+          <li class="header-name">
+            ようこそ、<%= (current_customer).family_name %>さん！
+          </li>
           <li><%= link_to ' mypage',customer_path(current_customer),class: 'fas fa-home nav-link text-light' %></li>
           <li><%= link_to ' products',products_path,class: 'fas fa-gift nav-link text-light' %></li>
           <li><%= link_to ' cart',cart_products_path ,class: 'fas fa-shopping-cart nav-link text-light'%></li>
