--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,27 +1,27 @@
-
-
-<h2 class="marker">配送先編集</h2>
-
-<%= form_with(model: @address, url:address_path , local:true , method: :patch )do |f| %>
-  <div>
-    <div>
-      <%= f.label :"郵便番号(ハイフンなし)" %>
-      <%= f.text_field :postcode %>
-    </div>
-    <div>
-      <%= f.label :"住所" %>
-      <%= f.text_field :address %>
-    </div>
-    <div>
-      <%= f.label :"宛名" %>
-      <%= f.text_field :name %>
-    </div>
-    <div>
-      <%= f.submit "変更内容を保存" %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker">配送先編集</h2>
+        <table class="addresses">
+          <%= form_with(model: @address, url:address_path , local:true , method: :patch )do |f| %>
+            <tbody>
+              <tr>
+                <td><%= f.label :"郵便番号(ハイフンなし)" %></td>
+                <td><%= f.text_field :postcode %></td>
+              </tr>
+              <tr>
+                <td><%= f.label :"住所" %></td>
+                <td><%= f.text_field :address ,:size=>"40" %></td>
+              </tr>
+              <tr>
+                <td><%= f.label :"宛名" %></td>
+                <td><%= f.text_field :name %></td>
+                <td><%= f.submit "変更内容を保存" , class:"btn btn-success" %></td>
+                <td><%= link_to "戻る", addresses_path , class: "btn btn-outline-secondary"%></td>
+              </tr>
+            </tbody>
+          <% end %>
+        </table>
     </div>
   </div>
-<% end %>
-
-  <div>
-     <%= link_to "戻る", addresses_path , class: "btn btn-outline-secondary"%>
-  </div>
+</div>
