--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,49 +1,51 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-          <h2 class="marker"> 配送先登録/一覧</h2>
+    <div class="col-md-12">
+      <h2 class="marker"> 配送先登録/一覧</h2>
+        <table class="addresses">
           <%= form_with(model: @address, :url => {:controller => "public/addresses"}) do |f| %>
-              <div class="col-xs-10">
-                <div class="col-xs-12">
-                  <%= f.label :"郵便番号(ハイフンなし)" %>
-                  <%= f.text_field :postcode ,placeholder:"0000000" %>
-                </div>
-                <div class="col-xs-3">
-                  <%= f.label :"住所" %>
-                  <%= f.text_field :address ,:size=>"40" , placeholder:"東京都渋谷区代々木神園町0-0"%>
-                </div>
-                <div class="col-xs-3">
-                  <%= f.label :"宛名" %>
-                  <%= f.text_field :name , placeholder:"長野太郎"%>
-                </div>
-                <%= f.submit "新規登録" %>
-              </div>
+            <tbody>
+              <tr>
+                <td><%= f.label :"郵便番号(ハイフンなし)" %></td>
+                <td><%= f.text_field :postcode ,placeholder:"0000000" %></td>
+              </tr>
+              <tr>
+                <td><%= f.label :"住所" %></td>
+                <td><%= f.text_field :address ,:size=>"40" , placeholder:"東京都渋谷区代々木神園町0-0"%></td>
+              </tr>
+              <tr>
+                <td><%= f.label :"宛名" %></td>
+                <td><%= f.text_field :name , placeholder:"長野太郎"%></td>
+                <td><%= f.submit "配送先登録" ,class:"btn btn-success" %></td>
+              </tr>
+            </tbody>
           <% end %>
-
+        </table>
     </div>
   </div>
 </div>
 
-
-<table border="2">
-  <thead>
-    <tr bgcolor="lightgray">
-      <th>郵便番号</th>
-      <th>住所</th>
-      <th>宛名</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @addresses.each do |address| %>
-      <tr>
-        <td><%= address.postcode %></td>
-        <td><%= address.address %></td>
-        <td><%= address.name %></td>
-        <td><%= link_to "編集する", edit_address_path(address) , class: "btn btn-outline-success edit_address_#{address.id}"%></td>
-        <td><%= link_to "削除する", address_path(address), method: :delete, "data-confirm" => '本当に削除しますか？' , class: "btn btn-outline-danger destroy_address_#{address.id}"%></td>
+<div class="address">
+  <table border="2">
+    <thead>
+      <tr bgcolor="lightgray">
+        <th>郵便番号</th>
+        <th>住所</th>
+        <th>宛名</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @addresses.each do |address| %>
+        <tr>
+          <td><%= address.postcode %></td>
+          <td><%= address.address %></td>
+          <td><%= address.name %></td>
+          <td><%= link_to "編集する", edit_address_path(address) , class: "btn btn-outline-success edit_address_#{address.id}"%></td>
+          <td><%= link_to "削除する", address_path(address), method: :delete, "data-confirm" => '本当に削除しますか？' , class: "btn btn-outline-danger destroy_address_#{address.id}"%></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
