--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,4 +1,8 @@
-<h2>会員情報編集</h2>
+<div class="container"></div>
+  <div class="row"></div>
+    <div class="col-lg-12"></div>
+
+<h2 class="marker">会員情報編集</h2>
 
 <%= form_with model: @customer, local:true do |f| %>
       <div class="form-group">
