--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,13 @@
      <ul class="col-md-2">
        <span class="span">Menu</span>
 
-       <% if customer_signed_in? %>
+       <% if admin_signed_in? %>
+          <li><%= link_to 'Home', "/",class: ' fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' products',admin_products_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' customers',admin_customers_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' orders',admin_orders_path,class: 'fas fa-gift nav-link text-light' %></li>
+          <li><%= link_to ' genres',admin_genres_path,class: 'fas fa-gift nav-link text-light' %></li>
+       <% elsif customer_signed_in? %>
         <div class="menu">
          <li><%= link_to 'Home', "/",class: ' text-light' %></li>
          <li><%= link_to 'About',homes_about_path, class: 'text-light' %></li>
