--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -4,7 +4,7 @@
 購入には会員登録が必要になります。</h3>
 
 <h1>新着商品</h1>
-    <% @products.each do |product| %>
+    <% @products.first(4).each do |product| %>
         <%= link_to product_path(product.id) do %>
             <%= attachment_image_tag @products, :image, :fill, 150, 250, format: 'png', fallback: "no_image.png" %></td>
         <% end %>
