--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,7 +3,7 @@
   <strong>支払方法</strong>
 </div>
 
-<%= form_with(model: @order, local: true) do |f| %>
+<%= form_with(model: @order, local: true, url: {action: 'verification'}) do |f| %>
 <div>
   <label><%= f.radio_button :payment_method, :クレジットカード %>クレジットカード</label>
   <label><%= f.radio_button :payment_method, :銀行振込 %>銀行振込</label>
@@ -12,6 +12,30 @@
   <strong>お届け先</strong>
   <div>
     <label><%= f.radio_button :address_option, 1 %>ご自身の住所</label>
-    <%= current_customer.address %>
+    <div><%= current_customer.address %></div>
   </div>
+  <div>
+    <label><%= f.radio_button :address_option, 2 %>登録済の住所から選択</label>
+    <div><%= f.select :selected_address, @select_address, {include_blank: '選択ボックス'} %></div>
+  </div>
+  <div>
+    <label><%= f.radio_button :address_option, 3 %>新しいお届け先</label>
+    <div>
+      <%= f.label :郵便番号（ハイフンなし） %>
+      <%= f.text_field :postcode %>
+    </div>
+    <div>
+      <%= f.label :住所 %>
+      <%= f.text_field :address %>
+    </div>
+    <div>
+      <%= f.label :宛名 %>
+      <%= f.text_field :name %>
+    </div>
+
+  </div>
+
+  <duv>
+    <%= f.submit "確認画面へ進む" %>
+  </duv>
 <% end %>
