--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -2,7 +2,8 @@
   <%= form_with model:@product, local:true do |f| %>
     <div class="form-group">
       <h5>商品画像</h5>
-      <%= f.attachment_field :image %>
+      <%= f.attachment_field :image_id %>
+      <%= f.attachment_field :image, class: "image" %>
     </div>
 
     <div class="form-group">
