--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,16 +1,16 @@
 <h2>ジャンル追加・一覧</h2>
+<%= form_with model:@product, local:true do |f| %>
   <table class="table">
     <thead>
       <tr>
-        <%= form_with model:@product, local:true do |f| %>
           <td><h4>ジャンル名</h4></td>
           <td><%= f.text_field :name, autofocus: true, id:"inputTitle", placeholder:"name"%></td>
-          <td><%= f.submit "変更を保存" %></td>
-        <% end %>
+          <td><%= f.submit "新規登録" %></td>
       </tr>
     </thead>
 
     <tbody>
+      <h2>ジャンル</h2>
       <% @products.each do |product| %>
         <tr>
           <td><%= product.title %></td>
@@ -19,3 +19,4 @@
       <% end %>
     </tbody>
   </table>
+<% end %>
