--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -25,7 +25,7 @@
   </div>
 </div>
 
-<div class="address">
+<div class="address1">
   <table border="2">
     <thead>
       <tr bgcolor="lightgray">
