--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,38 +1,44 @@
-<div class="container"></div>
-  <div class="row"></div>
-    <div class="col-lg-12"></div>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h2 class="marker">会員情報編集</h2>
+        <table class="customer-edit">
+          <%= form_with model: @customer, local:true do |f| %>
+            <tbody>
+              <tr>
+                  <td><%= f.label :"氏名" %></td>
+                  <td><%= f.text_field :family_name  , class:"form-control family_name" %></td>
+                  <td><%= f.text_field :first_name, class:"form-control first_name" %></td>
+              </tr>
+              <tr>
+                  <td><%= f.label :"フリガナ" %></td>
+                  <td><%= f.text_field :family_name_kana , class:"form-control family_name_kana" %></td>
+                  <td><%= f.text_field :first_name_kana ,class:"form-control first_name_kana" %></td>
+              </tr>
+              <tr>
+                  <td><%= f.label :"郵便番号" %></td>
+                  <td><%= f.text_field :postcode, class:"form-control postcode" %></td>
+              </tr>
+              <tr>
+                  <td><%= f.label :"住所" %></td>
+                  <td colspan="2"><%= f.text_field :address, class:"form-control address" %></td>
+                  <td></td>
+              </tr>
+              <tr>
+                  <td><%= f.label :"電話番号" %></td>
+                  <td><%= f.text_field :phone_number, class:"form-control phone_number" %></td>
+              </tr>
+              <tr>
+                  <td><%= f.label :"メールアドレス" %></td>
+                  <td><%= f.text_field :email, class:"form-control email" %></td>
+                  <td><%= f.submit '編集内容を保存', class:"btn btn-success btn-customer_edit" %></td>
+                  <td><%= link_to "退会する", customer_quit_path, class:"btn btn-danger btn-customer_quit" %></td>
+              </tr>
 
-<h2 class="marker">会員情報編集</h2>
 
-<%= form_with model: @customer, local:true do |f| %>
-      <div class="form-group">
-        <%= f.label :"氏名" %>
-        <%= f.text_field :family_name, class:"form-control family_name" %>
-        <%= f.text_field :first_name, class:"form-control first_name" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"フリガナ" %>
-        <%= f.text_field :family_name_kana, class:"form-control family_name_kana" %>
-        <%= f.text_field :first_name_kana, class:"form-control first_name_kana" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"郵便番号" %>
-        <%= f.text_field :postcode, class:"form-control postcode" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"住所" %>
-        <%= f.text_field :address, class:"form-control address" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"電話番号" %>
-        <%= f.text_field :phone_number, class:"form-control phone_number" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"メールアドレス" %>
-        <%= f.text_field :email, class:"form-control email" %>
-      </div>
-      <div class="action">
-        <%= f.submit '編集内容を保存', class:"btn btn-success btn-customer_edit" %>
-        <%= link_to "退会する", customer_quit_path, class:"btn btn-danger btn-customer_quit" %>
-      </div>
-      <% end %>
+            </tbody>
+          <% end %>
+        </table>
+    </div>
+  </div>
+</div>
