--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,22 +1,22 @@
 <h2>ジャンル追加・一覧</h2>
-<%= form_with model:@product, local:true do |f| %>
+  <%= form_with model:@genre, url: admin_genres_path do |f| %>
   <table class="table">
     <thead>
       <tr>
           <td><h4>ジャンル名</h4></td>
-          <td><%= f.text_field :name, autofocus: true, id:"inputTitle", placeholder:"name"%></td>
+          <td><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"name"%></td>
           <td><%= f.submit "新規登録" %></td>
       </tr>
     </thead>
 
     <tbody>
       <h2>ジャンル</h2>
-      <% @products.each do |product| %>
+      <% @genres.each do |genre| %>
         <tr>
-          <td><%= product.title %></td>
-          <td><%= link_to "編集する", edit_admin_genre_path(@product), class:"edit_#{@product}", class: "btn btn-success" %></td>
+          <td><%= genre.name %></td>
+          <td><%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success" %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
-<% end %>
+  <% end %>
