--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,11 +19,11 @@
 <h1>新着商品</h1>
     <% @products.first(4).each do |product| %>
         <%= link_to product_path(product.id) do %>
-            <%= attachment_image_tag @products, :image, :fill, 150, 250, format: 'png', fallback: "no_image.png" %></td>
+            <%= attachment_image_tag product, :image, :fill, 150, 250, format: 'png', fallback: "no_image.png" %>
         <% end %>
         <h3 class="product-name"><%= product.name %></h3>
         <h3 class="product-price"><%= product.excluding_tax_price %></h3>
     <% end %>
 
-<%= link_to '商品を検索する', products_path %>
+<%= link_to '全ての商品を見る>', products_path %>
 
