--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,41 +1,50 @@
-<h2><%= @customer.family_name %><%= @customer.first_name %>さんの会員情報編集</h2>
-
-<%= form_with model: @customer, local:true do |f| %>
-　　　<div class="form-group">
-        <%= f.label :"会員ID" %>
-        <%= f.label :"#{@customer.id}" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"氏名" %>
-        <%= f.text_field :family_name, class:"form-control family_name" %>
-        <%= f.text_field :first_name, class:"form-control first_name" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"フリガナ" %>
-        <%= f.text_field :family_name_kana, class:"form-control family_name_kana" %>
-        <%= f.text_field :first_name_kana, class:"form-control first_name_kana" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"postcode" %>
-        <%= f.text_field :postcode, class:"form-control postcode" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"電話番号" %>
-        <%= f.text_field :phone_number, class:"form-control phone_number" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :"メールアドレス" %>
-        <%= f.text_field :email, class:"form-control email" %>
-      </div>
-      <div class="form-group col-xs-9">
-        <%= f.label :"会員ステータス", class: "col-sm-4 control-label" %>
-        　<%= f.radio_button :membership_status, true %>
-        　<%= f.label :membership_status, "有効", {value: :true, style: "display: inline-block;"} %>
-        　<%= f.radio_button :membership_status, false %>
-        　<%= f.label :membership_status, "退会", {value: :false, style: "display: inline-block;"} %>
-      </div>
-      <div>
-        <%= f.submit '変更を保存', class:"btn btn-success btn-customer_edit" %>
-      </div>
-      
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker"><%= @customer.family_name %><%= @customer.first_name %>さんの会員情報編集</h2>
+      <%= form_with model: @customer, local:true do |f| %>
+        <table class="admin-customer" style= "width: 900px;margin: 0 auto;">
+          <tbody>
+      　　    <tr>
+              <td><%= f.label :"会員ID" %></td>
+              <td><%= f.label :"#{@customer.id}" %></td>
+      　　    </tr>
+            <tr>
+              <td><%= f.label :"氏名" %></td>
+              <td><%= f.text_field :family_name, class:"form-control family_name" %></td>
+              <td><%= f.text_field :first_name, class:"form-control first_name" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"フリガナ" %></td>
+              <td><%= f.text_field :family_name_kana, class:"form-control family_name_kana" %></td>
+              <td><%= f.text_field :first_name_kana, class:"form-control first_name_kana" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"郵便番号" %></td>
+              <td><%= f.text_field :postcode, class:"form-control postcode" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"住所" %></td>
+              <td colspan="2"><%= f.text_field :address, class:"form-control address" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"電話番号" %></td>
+              <td><%= f.text_field :phone_number, class:"form-control phone_number" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"メールアドレス" %></td>
+              <td><%= f.text_field :email, class:"form-control email" %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"会員ステータス"%></td>
+            　<td><%= f.radio_button :membership_status, true %> <%= f.label :membership_status, "有効", {value: :true, style: "display: inline-block;"} %>
+            　      <%= f.radio_button :membership_status, false %><%= f.label :membership_status, "退会", {value: :false, style: "display: inline-block;"} %></td>
+              <td><%= f.submit '変更を保存', class:"btn btn-success btn-customer_edit" %></td>
+            </tr>
+            
+          </tbody>
+        </table>
+      <% end %>
+    </div>
+  </div>
+</div>
