--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,34 +1,39 @@
-<h2>会員一覧</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker">会員一覧</h2>
+      <table class="table" style= "width: 900px;margin: 0 auto;">
+        <thead style="background: lightgray;">
+          <tr>
+            <th>会員ID</th>
+            <th>氏名</th>
+            <th>メールアドレス</th>
+            <th>ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+        <% @customers.each do |customer| %>
+          <tr>
+            <td><%= customer.id %></td>
+            <td>
+              <%= link_to admin_customer_path(customer) do %>
+                <%= customer.family_name %><%= customer.first_name %>
+              <% end %>
+            </td>
+            <td><%= customer.email %></td>
+            <td>
+              <% if customer.membership_status == false%>
+                <p><i class="text-secondary"></i>退会</p>
+              <% else %>
+                <p><i class="text-success"></i>有効</p>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>会員ID</th>
-      <th>氏名</th>
-      <th>メールアドレス</th>
-      <th>ステータス</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @customers.each do |customer| %>
-    <tr>
-      <td><%= customer.id %></td>
-      <td>
-        <%= link_to admin_customer_path(customer) do %>
-          <%= customer.family_name %><%= customer.first_name %>
-        <% end %>
-      </td>
-      <td><%= customer.email %></td>
-      <td>
-        <% if customer.membership_status == false%>
-          <p><i class="text-secondary"></i>退会</p>
-        <% else %>
-          <p><i class="text-success"></i>有効</p>
-        <% end %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-  
-<%= paginate @customers %>
+      <%= paginate @customers %>
+    </div>
+  </div>
+</div>
