--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,22 +1,28 @@
-<h2>ジャンル追加・一覧</h2>
-<%= form_with model:@product, local:true do |f| %>
-  <table class="table">
-    <thead>
-      <tr>
-          <td><h4>ジャンル名</h4></td>
-          <td><%= f.text_field :name, autofocus: true, id:"inputTitle", placeholder:"name"%></td>
-          <td><%= f.submit "新規登録" %></td>
-      </tr>
-    </thead>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker">ジャンル追加・一覧</h2>
+      <%= form_with model:@product, local:true do |f| %>
+        <table class="table" style= "width: 900px;margin: 0 auto;">
+          <thead>
+            <tr>
+                <td><h4>ジャンル名</h4></td>
+                <td><%= f.text_field :name, autofocus: true, id:"inputTitle", placeholder:"name"%></td>
+                <td><%= f.submit "新規登録",class:"btn btn-success" %></td>
+            </tr>
+          </thead>
 
-    <tbody>
-      <h2>ジャンル</h2>
-      <% @products.each do |product| %>
-        <tr>
-          <td><%= product.title %></td>
-          <td><%= link_to "編集する", edit_admin_genre_path(@product), class:"edit_#{@product}", class: "btn btn-success" %></td>
-        </tr>
+          <tbody>
+            <h2>ジャンル</h2>
+            <% @products.each do |product| %>
+              <tr bgcolor="lightgray">
+                <td><%= product.title %></td>
+                <td><%= link_to "編集する", edit_admin_genre_path(@product), class:"edit_#{@product}", class: "btn btn-success" %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
       <% end %>
-    </tbody>
-  </table>
-<% end %>
+    </div>
+  </div>
+</div>
