--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,34 +1,40 @@
-<div class="container my-5">
+<div class="container">
   <div class="row">
-    <h2>注文履歴一覧</h2>
-  </div>
+    <div class="col-md-12">
 
-  <div class="row mt-5">
-    <table class="table">
-      <thead>
-        <tr>
-          <th>購入日時</th>
-          <th>購入者</th>
-          <th>注文個数</th>
-          <th>注文ステータス</th>
-        </tr>
-      </thead>
-  </div>
+      <h2 class="marker">注文履歴一覧</h2>
+      <table class="table" style= "width: 900px;margin: 0 auto;">
 
-  <% @orders.each do |order| %>
-      <tr>
-      <td><%= link_to order.created_at.strftime("%Y-%m-%d %H:%M:%S"),admin_order_path(order) %></td>
+        <thead>
+          <tr bgcolor="lightgray">
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
+          </tr>
+        </thead>
 
-      <td><%= order.customer.family_name %>
-          <%= order.customer.first_name %>
-      </td>
 
-      <% order.order_products.each do |order_product| %>
-        <td><%= order_product.amount %></td>
+      <% @orders.each do |order| %>
+        <tbody>
+          <tr>
+          <td><%= link_to order.created_at.strftime("%Y-%m-%d %H:%M:%S"),admin_order_path(order) %></td>
+
+          <td><%= order.customer.family_name %>
+              <%= order.customer.first_name %>
+          </td>
+
+          <% order.order_products.each do |order_product| %>
+            <td><%= order_product.amount %></td>
+          <% end %>
+
+          <td><%= order.order_status %></td>
+
+          </tr>
+        </tbody>
       <% end %>
-
-      <td><%= order.order_status %></td>
-
-      </tr>
-  <% end %>
-  <%= paginate @orders %>
+      </table>
+      <%= paginate @orders %>
+    </div>
+  </div>
+</div>
