--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,16 +1,11 @@
-<div class='row'>
-<div class="offset-md-1 col-md-8">
-        <!--font Awesomeで＋ボタンを新規追加-->
-        <table class="table">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+        <h2 class="marker">商品一覧</h2>
+            <a href="/admin/products/new" class="products1"><span class="fas fa-plus-circle fa-2x nav-link fa-pull-right" aria-hidden="true"></span></a>
+        <table class="table" style= "width: 900px;margin: 0 auto;">
             <thead>
-                <tr>
-                    <th><h2>商品一覧</h2></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th><%= link_to "新規登録", new_admin_product_path(@product), class: "far fa-plus-circle" %></th>
-                </tr>
-                <tr>
+                <tr  bgcolor="lightgray">
                     <th style = "width: 20%;">商品ID</th>
                     <th style = "width: 25%;">商品名</th>
                     <th style = "width: 15%;">税抜価格</th>
@@ -31,6 +26,8 @@
                 <% end %>
             </tbody>
         </table>
+        <%= paginate @products %>
+
     </div>
+  </div>
 </div>
-<%= paginate @products %>
