--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,40 +1,48 @@
-<h2>商品新規登録</h2>
-  <%= form_with model:@product, local:true do |f| %>
-    <div class="form-group">
-      <h5>商品画像</h5>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
 
+    <h2 class="marker">商品新規登録</h2>
+      <%= form_with model:@product, local:true do |f| %>
+        <table class="product-new">
+          <tbody>
 
-      <%= f.attachment_field :image_id %>
-      
+            <tr>
+              <td><h5>商品画像</h5></td>
+              <td><%= f.attachment_field :image_id %></td>
+            </tr>
+            <tr>
+              <td><h5>商品名</h5></td>
+              <td><%= f.text_field :name, autofocus: true, id:"name", :size=>"30", placeholder:"商品名"%></td>
+            </tr>
+
+            <tr>
+              <td><h5>商品説明</h5></td>
+              <td><%= f.text_area :body, autofocus: true, size: "30x5", id:"body", placeholder:"商品説明"%></td>
+            </tr>
+
+            <tr>
+              <td><h5>ジャンル</h5></td>
+              <td><%= select_tag(:choice, options_for_select([["選択してください", "1" ],["ケーキ", "2" ],["プリン", "3" ],["焼き菓子", "4" ],["キャンディ", "5" ]])) %></td>
+            </tr>
+
+            <tr>
+              <td><h5>税抜価格</h5></td>
+              <td><%= f.text_area :body, autofocus: true, id:"body",:size=>"30", placeholder:"1000円"%>円</td>
+            </tr>
+
+            <tr>
+              <td><h5>販売ステータス</h5></td>
+              <td><label><%= f.radio_button :sale_status, "販売中" %> 販売中   </label>
+              <label><%= f.radio_button :sale_status, "販売停止中" %> 販売停止中</label></td>
+              <td><%= f.submit "新規登録",class:"btn btn-success" %></td>
+            </tr>
+
+            <tr>
+            </tr>
+          </tbody>
+        </table>
+      <% end %>
     </div>
-
-    <div class="form-group">
-      <h5>商品名</h5>
-      <%= f.text_field :name, autofocus: true, id:"name", placeholder:"商品名"%>
-      </div>
-
-    <div class="form-group">
-      <h5>商品説明</h5>
-      <%= f.text_area :body, autofocus: true, id:"body", placeholder:"商品説明"%>
-    </div>
-
-    <div class="form-group">
-      <h5>ジャンル</h5>
-      <%= select_tag(:choice, options_for_select([["選択してください", "1" ],["ケーキ", "2" ],["プリン", "3" ],["焼き菓子", "4" ],["キャンディ", "5" ]])) %>
-    </div>
-
-    <div class="form-group">
-      <h5>税抜価格</h5>
-      <%= f.text_area :body, autofocus: true, id:"body", placeholder:"1000円"%>
-    </div>
-
-    <div class="form-group">
-      <h5>販売ステータス</h5>
-      <label><%= f.radio_button :sale_status, "販売中" %> 販売中 </label>
-      <label><%= f.radio_button :sale_status, "販売停止中" %> 販売停止中</label>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit "新規登録" %>
-    </div>
-  <% end %>
+  </div>
+</div>
