--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,8 +1,8 @@
 <h2>商品編集</h2>
-  <%= form_with model:@product, local:true do |f| %> 
+  <%= form_with model:@product, url: admin_product_path, local:true, method: :patch do |f| %> 
     <div class="form-group">
       <h5>商品画像</h5>
-      <%= f.attachment_field :image %>
+      <%= f.attachment_field :image, class: 'image' %>
     </div>
 
     <div class="form-group">
@@ -22,7 +22,7 @@
 
     <div class="form-group">
       <h5>税抜価格</h5>
-      <%= f.text_area :body, autofocus: true, id:"body", placeholder:"1000円"%>
+      <%= f.text_field :excluding_tax_price, autofocus: true, id:"body", placeholder:"1000"%>
     </div>
     
     <div class="form-group">
