--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -1,5 +1,6 @@
 <h2>ショッピングカート</h2>
 
+<% if @cart_products.present? %>
 
 <%= link_to "カートを空にする", cart_products_path, method: :delete, class:"btn btn-danger btn-cart_product_all_destroy" %>
 
@@ -30,7 +31,7 @@
         <% end %>
       </td>
       <td>
-        <%= cart_product.amount * cart_product.product.excluding_tax_price %>
+        <%= cart_product.amount.to_i * cart_product.product.excluding_tax_price.to_i %>
       </td>
       <td>
         <%= link_to " 削除する", cart_product_path(cart_product), method: :delete, class:"btn btn-danger btn-cart_product_destroy" %>
@@ -49,4 +50,10 @@
 </p>
 
 <p><%= link_to " 情報入力に進む", new_order_path, class:"btn btn-success btn-order_new" %></p>
+
+<% else %>
+  <p>ショッピングカートに商品がありません。</p>
+  <p><%= link_to "商品一覧", products_path, class: "btn-primary" %></p>
+
+<% end %>
 
