--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,4 +1,4 @@
-<%= attachment_image_tag @product, :image, :fill, 200, 300, format: 'png', fallback: "no_image.png" %></td>
+<%= attachment_image_tag @product, :image, :fill, 200, 300, format: 'png', fallback: "cake.jpg" %></td>
   <table class = "table">
     <tr>
       <th>商品名</th>
