--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h2 class="marker"> 配送先登録/一覧</h2>
-      <%= form_with model: @address, remote: true do |f| %>
+      <%= form_with model: @address, local: true do |f| %>
         <table class="addresses">
           <tbody>
               <tr>
