--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -27,9 +27,10 @@
     
     <div class="form-group">
       <h5>販売ステータス</h5>
-      <label><%= f.radio_button :sale_status, "販売中", value: true %> 販売中 </label>
-      <label><%= f.radio_button :sale_status, "販売停止中", value: false %> 販売停止中</label>
+      <label><%= f.radio_button :sale_status, true %><%= f.label :sale_status, "販売中", {value: :true, style: "display: inline-block;"} %></label>
+      <label><%= f.radio_button :sale_status, false %><%= f.label :sale_status, "販売停止中", {value: :false, style: "display: inline-block;"} %></label>
     </div>
+
 
     <div class="form-group">
       <%= f.submit "変更を保存" %>
