--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,24 +1,30 @@
 <%= attachment_image_tag @product, :image, :fill, 200, 300, format: 'png', fallback: "no_image.png" %></td>
   <table class = "table">
     <tr>
-      <th>商品名</th>
-      <th><h5 class="product-name"><%= @product.name %></h5></th>
+      <td>商品名</td>
+      <td><h5 class="product-name"><%= @product.name %></h5></td>
     </tr>
     <tr>
-      <th>商品説明</th>
-      <th><h5 class="product-body"><%= @product.body %></h5></th>
+      <td>商品説明</td>
+      <td><h5 class="product-body"><%= @product.body %></h5></td>
     </tr>
     <tr>
-      <th>ジャンル</th>
-      <th><h5 class="product-genre"><%= @product.genre.name %></h5></th>
+      <td>ジャンル</td>
+      <td><h5 class="product-genre"><%= @product.genre.name %></h5></td>
     </tr>
     <tr>
-      <th>税込価格（税抜き価格）</th>
-      <th><h5 class="product-price"><%= @product.excluding_tax_price %></h5></th>
+      <td>税込価格（税抜き価格）</td>
+      <td><h5 class="product-price"><%= @product.excluding_tax_price %></h5></td>
     </tr>
     <tr>
-      <th>販売ステータス</th>
-      <th><h5 class="product-status"><%= @product.sale_status %></h5></th>
+      <td>販売ステータス</td>
+      <td>
+        <% if @product.sale_status == false %>
+          <p><i class="text-secondary"></i>販売停止中</p>
+        <% else %>
+          <p><i class="text-success"></i>販売中</p>
+        <% end %>
+      </td>
     </tr>
   </table>
 
