レイアウト修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,7 @@ body{
 .carousel-inner p{
   position: absolute;
   padding: 25px;
-  margin: 415px 30px 300px 690px;
+  margin: 400px 30px 300px 510px;
   color: #fff;
   font-size: 20px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -202,6 +202,10 @@ body{
   // margin-right: auto;
   border-collapse: separate;
   border-spacing: 4px 10px;
+}
+.product-new1{
+  margin-left: 400px;
+  padding: 20px;
 }
 .admin-customer{
   border-collapse: separate;
