--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
 <div id="carousel-example" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000" style="position: relative;">
 	<div class="carousel-inner"  style="position: relative;">
 		<div class="carousel-item active"  style="position: relative;">
@@ -27,3 +30,7 @@
 
 <%= link_to '全ての商品を見る>', products_path %>
 
+
+    </div>
+  </div>
+</div>
