--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -1,5 +1,7 @@
-
-<h2>商品一覧</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="marker">商品一覧</h2>
     <% @products.each do |product| %>
         <%= link_to product_path(product.id) do %>
             <%= attachment_image_tag product, :image, :fill, 150, 250, format: 'png', fallback: "no_image.png" %>
@@ -7,6 +9,9 @@
         <%= link_to product.name, product_path(product) %>
         <h3 class="product-price"><%= product.excluding_tax_price %></h3>
     <% end %>
-    
+
 <%= link_to '商品を検索する', products_path %>
 <%= paginate @products %>
+    </div>
+  </div>
+</div>
