--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h2 class="marker"><%= @customer.family_name %><%= @customer.first_name %>さんの会員情報編集</h2>
-      <%= form_with model: @customer, local:true do |f| %>
+      <%= form_with model: @customer, url: admin_customer_path, local:true do |f| %>
         <table class="admin-customer" style= "width: 900px;">
           <tbody>
       　　    <tr>
