--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,5 +1,14 @@
 <h2>商品編集</h2>
-  <%= form_with model:@product, url: admin_product_path, local:true, method: :patch do |f| %> 
+<% if @product.errors.any? %>
+  <h6><%= @product.errors.count %>件のエラーが発生しました</h6>
+  <ul>
+  <% @product.errors.full_messages.each do |message| %>
+  <li><%= message %></li>
+  <% end %>
+  </ul>
+<% end %>
+
+  <%= form_with model:@product, url: admin_product_path, local:true, method: :patch do |f| %>
     <div class="form-group">
       <h5>商品画像</h5>
       <%= f.attachment_field :image, class: 'image' %>
@@ -24,7 +33,7 @@
       <h5>税抜価格</h5>
       <%= f.text_field :excluding_tax_price, autofocus: true, id:"body", placeholder:"1000"%>
     </div>
-    
+
     <div class="form-group">
       <h5>販売ステータス</h5>
       <label><%= f.radio_button :sale_status, true %><%= f.label :sale_status, "販売中", {value: :true, style: "display: inline-block;"} %></label>
