--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -8,9 +8,9 @@
                 <tr  bgcolor="lightgray">
                     <th style = "width: 10%;">商品ID</th>
                     <th style = "width: 35%;">商品名</th>
-                    <th style = "width: 15%;">税抜価格</th>
+                    <th style = "width: 20%;">税抜価格（円）</th>
                     <th style = "width: 20%;">ジャンル</th>
-                    <th style = "width: 20%;">ステータス</th>
+                    <th style = "width: 15%;">ステータス</th>
                 </tr>
             </thead>
 
