--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,3 +1,11 @@
+<% if @product.errors.any? %>
+  <h6><%= @product.errors.count %>件のエラーが発生しました</h6>
+  <ul>
+  <% @product.errors.full_messages.each do |message| %>
+  <li><%= message %></li>
+  <% end %>
+  </ul>
+<% end %>
 
 <h2>商品新規登録</h2>
   <%= form_with model:@product, url: admin_products_path, local:true, method: :post do |f| %>
@@ -36,4 +44,3 @@
       <%= f.submit "新規登録" %>
     </div>
   <% end %>
-  
