--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,10 @@
           <li><%= link_to ' orders',admin_orders_path,class: 'fas fa-people-carry nav-link text-light' %></li>
           <li><%= link_to ' genres',admin_genres_path,class: 'fas fa-gifts nav-link text-light' %></li>
           <li><%= link_to ' logout', destroy_admin_session_path, method: :delete,class: 'fas fa-sign-out-alt nav-link text-light' %></li>
+          <%= form_with(scope: :search, url: products_path, method: :get, local: true) do |f| %>
+            <%= f.text_field :name %>
+            <%= f.submit('検索') %>
+          <% end %>
         <% elsif customer_signed_in? %>
           <li class="header-name">
             ようこそ、<%= current_customer.family_name %>さん！
