--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -4,7 +4,7 @@
       <h2 class="marker">商品詳細</h2>
 
         <div class="admin-products-show1">
-          <%= attachment_image_tag @product, :image, :fill , format: 'png', size: "300x200" ,fallback: "cake.jpg" %></td>
+          <%= attachment_image_tag @product, :image, size: "300x200" ,fallback: "cake.jpg" %></td>
 
             <table class = "admin-products-show" >
               <tr>
