--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -20,15 +20,22 @@
 </div>
 
 <h1>新着商品</h1>
-    <% @products.first(4).each do |product| %>
-        <%= link_to product_path(product.id) do %>
-            <%= attachment_image_tag product, :image, :fill, 150, 250, format: 'png', fallback: "cake.png" %>
-        <% end %>
-        <h3 class="product-name"><%= product.name %></h3>
-        <h3 class="product-price"><%= product.excluding_tax_price %></h3>
-    <% end %>
+	<div class="public-products">
+
+	    <% @products.first(4).each do |product| %>
+		    <div class="public-products1">
+		        <%= link_to product_path(product.id) do %>
+		            <%= attachment_image_tag product, :image,  size:'235x180',  fallback: "cake.png" %>
+		        <% end %>
+		        <h3 class="product-name"><%= product.name %></h3>
+		        <h3 class="product-price">¥<%= product.excluding_tax_price %></h3>
+		    </div>
+    	<% end %>
+	</div>
+<div class="top">
 
 <%= link_to '全ての商品を見る>', products_path %>
+</div>
 
 
     </div>
