--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -6,7 +6,7 @@
           <% @products.each do |product| %>
         <div class="public-products1">
               <%= link_to product_path(product.id) do %>
-                  <%= attachment_image_tag product, :image, :fill, size:'235x180' , format: 'png', fallback: "cake.jpg" %>
+                  <%= attachment_image_tag product, :image, size:'235x180' ,  fallback: "cake.jpg" %>
               <% end %>
 
                 <p><%= link_to product.name, product_path(product) %></p>
